[gd_scene load_steps=9 format=3 uid="uid://dhbbeq4o8cx4c"]

[ext_resource type="Script" uid="uid://c3m2hpfx0bo5o" path="res://assets/Scripts/Menu/level_complete.gd" id="1_0w1l2"]
[ext_resource type="FontFile" uid="uid://dk82jtbi03n5p" path="res://assets/Fonts/Coven-Filled.ttf" id="2_8fffl"]
[ext_resource type="Texture2D" uid="uid://cmyfl0cl28vst" path="res://assets/Sprites/Button/blue.png" id="2_achj7"]
[ext_resource type="Texture2D" uid="uid://d4j70uffu0gxu" path="res://assets/Sprites/Button/green_pressed.png" id="3_ctsdo"]
[ext_resource type="AudioStream" uid="uid://65pmp7x5hv07" path="res://assets/Music/goodresult-82807.mp3" id="5_ctsdo"]

[sub_resource type="Animation" id="Animation_m3srs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.92549, 0.517647, 0.160784, 0)]
}

[sub_resource type="Animation" id="Animation_wmn80"]
resource_name = "finish_level"
length = 0.76
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.76),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.92549, 0.517647, 0.160784, 0), Color(0.372549, 0.588235, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ip6mi"]
_data = {
&"RESET": SubResource("Animation_m3srs"),
&"finish_level": SubResource("Animation_wmn80")
}

[node name="LevelComplete" type="CanvasLayer"]
script = ExtResource("1_0w1l2")

[node name="FinalTime" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ip6mi")
}

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.92549, 0.517647, 0.160784, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -78.0
offset_right = 38.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Restart" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_achj7")
texture_focused = ExtResource("3_ctsdo")

[node name="RestartText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/Restart"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.3333
offset_right = 1.3333
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_8fffl")
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextLevel" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_achj7")
texture_focused = ExtResource("3_ctsdo")

[node name="NextLevelText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/NextLevel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.33333
offset_right = 1.33333
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_8fffl")
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "Next Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_achj7")
texture_focused = ExtResource("3_ctsdo")

[node name="QuitText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.33333
offset_right = 1.33333
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_8fffl")
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LOneComplete" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_8fffl")
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "Level One Complete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TComplete" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_8fffl")
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "Tutorial Complete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LTwoComplete" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_8fffl")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "Level Two Complete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LThreeComplete" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_8fffl")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "Level Three Complete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelCompleteAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ctsdo")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
